--- a/10_Navigation/department.html
+++ b/10_Navigation/department.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<title>About Us</title>
+<title>Departments</title>
 <body>
-<div class="sidenav">
 <link rel="StyleSheet" href="nav.css">
-<a href="about.html" target="content">About Us</a>
-<a href="department.html" target="content">Departments</a>
-<a href="vision_mission.html" target="content">Vision/Mission</a>
-<a href="contacts.html" target="content">Contact Us</a>
+<div class="sidenav">
+<a href="navigation.html" >Home</a>
+<a href="about.html">About Us</a>
+<a href="department.html">Departments</a>
+<a href="vision_mission.html">Vision/Mission</a>
+<a href="contacts.html">Contact Us</a>
 </div>
 <div class="main">
-<link rel="StyleSheet" href="nav.css">
 <h1>Departments</h1>
 <ul>
 <li>Electrical and Computer Engineering</li>
