--- a/10_Navigation/vision_mission.html
+++ b/10_Navigation/vision_mission.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<title>About Us</title>
+<title>Vision and Mission</title>
 <body>
-<div class="sidenav">
 <link rel="StyleSheet" href="nav.css">
-<a href="about.html" target="content">About Us</a>
-<a href="department.html" target="content">Departments</a>
-<a href="vision_mission.html" target="content">Vision/Mission</a>
-<a href="contacts.html" target="content">Contact Us</a>
+<div class="sidenav">
+<a href="navigation.html" >Home</a>
+<a href="about.html">About Us</a>
+<a href="department.html">Departments</a>
+<a href="vision_mission.html">Vision/Mission</a>
+<a href="contacts.html">Contact Us</a>
 </div>
 <div class="main">
-<link rel="StyleSheet" href="nav.css">
 <h1>Vision and Mission</h1>
 <p>VISSION: To provide top class education to the community by achieving excellence in engineering education and mould world class engineers with competence, integrity and social commitment.</p>
 <p>MISSION: To provide the best faculty ,excellent infrastructure, commendable facilities for excellent academic ambiance to encourage research and development and to strengthen employability and campus placements.</p>
