--- a/1_Simple_program.html
+++ b/1_Simple_program.html
@@ -17,9 +17,9 @@
 <p><b>This is bold</b> <u>This is underline</u> <i>This is Italic</i></p>
 <br>
 <p><marquee>This is marquee</marquee></p>
-<a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://en.wikipedia.org/wiki/Robotics&ved=2ahUKEwjDjaDOjaWPAxWBXWwGHV73Ks4QFnoECBUQAQ&usg=AOvVaw0z7-WrcJZi_Jq7R0otwWdG">This is the link to Profile
+<a href="https://builtin.com/robotics">This is the link to Profile
         </a>
 <br>
-<img src="/home/user/Pictures/simple.jpg" width="50%", height="20%">
+<img src="https://images.wallpapersden.com/image/wxl-tree-alone-dark-evening-4k_81458.jpg" width="50%", height="20%">
 </body>
 </html>
