--- a/9_frames_html/fruits.html
+++ b/9_frames_html/fruits.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="css" href="styles.css">
 </head>
 <body>
-    <img src="https://img.wallpapic.com/i6252-823-47/medium/fruit-dessert-local-food-fruits-wallpaper.jpg" height=200px width=300px alt="Fruits Image">
+    <img src="/home/user/Pictures/fruits.jpg" height=200px width=300px alt="Fruits Image">
     <p>Fruits are the sweet, fleshy, edible parts of a plant that contain seeds, developing from the ovaries of flowering plants. They come in diverse colors, shapes, and flavors, such as round, red apples, citrus oranges, and tropical, juicy mangoes. Essential for a healthy diet, fruits provide vital vitamins, minerals, fiber, and antioxidants that support well-being. Examples include apples, bananas, strawberries, and watermelons, which are enjoyed raw or used in various dishes and can also be cooked.  
 </p>
 </body>
