--- a/11_student_registration/form.html
+++ b/11_student_registration/form.html
@@ -3,19 +3,19 @@
 <title>Student registration form</title>
 <style>
 .qual{
-width:"100%";
-border-collapse:"collapse";
-border-color:"white";
+width:100%;
+border-collapse:collapse;
+border:color:white;
 }
 .qual td,.qual th{
-border:"1px solid";
-padding:"4px";
-font-size:"13px";
-text-align:"left";
+border:1px solid;
+padding:4px;
+font-size:13px;
+text-align:left;
 }
 .buttons{
-text-align:"center";
-margin-top:"8px";
+text-align:center;
+margin-top:8px;
 }
 </style>
 </head>
@@ -77,7 +77,7 @@ margin-top:"8px";
 <input type="checkbox" name="hobbie" value="Drawing">Drawing
 <input type="checkbox" name="hobbie" value="Reading">Reading
 <input type="checkbox" name="hobbie" value="Other">Other
-<input type="text" name="otherhobby" size="10">
+<input type="text" name="other">
 </td>
 </tr>
 <tr>
@@ -143,7 +143,7 @@ margin-top:"8px";
 <td><input type="date" name="date"></td>
 </td>
 <tr>
-<td class="buttons" colspan="2" align="center">
+<td class=buttons" colspan="2" align="center">
 <input type="submit" value="SUBMIT" >
 <input type="reset" value="RESET">
 </td>
@@ -151,7 +151,6 @@ margin-top:"8px";
 </table>
 </body>
 </html>
-
 
 
 
