--- a/7_css_selector/css_selector_7.html
+++ b/7_css_selector/css_selector_7.html
@@ -1,8 +1,24 @@
 <html>
 <head>
 <title>css selectors</title>
-<link rel="stylesheet" href="selector.css">
 </head>
+<style>
+.first{
+background-color:green;
+font-size:20px;
+color:white;
+}
+#second{
+background-color:yellow;
+font-size:20px;
+color:red;
+}
+p{
+background-color:lightgrey;
+font-size:20px;
+color:blue;
+}
+</style>
 <body>
 <h1>CSS SELECTORS EXAMPLE</h1>
 <p class="first">This is the first paragraph with a class selector.</p>
