--- a/3_College_website.html
+++ b/3_College_website.html
@@ -1,9 +1,16 @@
 <html>
 <head>
-<link rel="StyleSheet" href="college_css.css">
 <title>Mea College</title>
 <h1 id="head">MEA ENGINEERING COLLEGE</h1>
 </head>
+<style>#head{
+text-align: center;
+color: blue;
+}
+table, th, td {
+  border: 1px solid black;
+}
+</style>
 <body>
 <marquee><p style="color:purple;text-align:center;">VISSION: To provide top class education to the community by achieving excellence in engineering education and mould world class engineers with competence, integrity and social commitment.<br>MISSION: To provide the best faculty ,excellent infrastructure, commendable facilities for excellent academic ambiance to encourage research and development and to strengthen employability and campus placements.</p></marquee> 
 <h2 style="background-color:lightblue;color:blue";>About Us</h2>
@@ -93,4 +100,5 @@
 <p>Pattikkad PO<br>Vengoor<br>Perinthalmanna-679325,Malappuram,Kerala State<br>
 <a href="https://www.meaec.edu.in/#">Official Website</a></p>
 </body>
+
 </html>
