--- a/10_Navigation/about.html
+++ b/10_Navigation/about.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <title>About Us</title>
+<link rel="StyleSheet" href="nav.css">
+</head>
 <body>
 <div class="sidenav">
-<link rel="StyleSheet" href="nav.css">
 <a href="navigation.html" >Home</a>
 <a href="about.html" >About Us</a>
 <a href="department.html" >Departments</a>
@@ -11,7 +12,6 @@
 <a href="contacts.html">Contact Us</a>
 </div>
 <div class="main">
-<link rel="StyleSheet" href="nav.css">
 <h1>About Us</h1>
 <p>MEA Engineering College, the first NAAC accredited self-financing engineering college in Malappuram district, is committed to provide excellent and value-based education with a flair for ethics and professionalism. The College is located amidst panoramic natural beauty over-looking the hills and valleys at Nellikunnu, near Perinthalmanna – a city of various educational institutions- on the Perinthalmanna- Melattur road. The College is easily accessible by road, rail and air. The College is governed by the MEA sponsored by the “Samastha Kerala Jammiyyathul Ulama”, a society instituted by top class intellectuals of the Muslim community. Janab Panakkad Sayed Sadique Ali Shihab Thangal is its charismatic head. The institution is affiliated to the APJ Abdul Kalam Technological University and approved by the AICTE.</p>
 <p>MEAEC has been accredited with a "B+" grade by NAAC and holds NBA accreditation for its Computer Science and Engineering and Mechanical Engineering programs. The college promotes a vibrant campus life through various extracurricular activities, such as arts and sports events. It has also engaged in international collaborations, being the only engineering college in Kerala to partner in the MIELES project, which focuses on e-learning strategies.</p>
