--- a/10_Navigation/department.html
+++ b/10_Navigation/department.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 <title>Departments</title>
-<body>
 <link rel="StyleSheet" href="nav.css">
+</head>
+<body>
 <div class="sidenav">
 <a href="navigation.html" >Home</a>
 <a href="about.html">About Us</a>
