--- a/12_Js_bg_change.html
+++ b/12_Js_bg_change.html
@@ -6,7 +6,7 @@
 <button id="button">Change Background Color</button>
 <script>
 let count = 0;
-document.getElementById("button").addEventListener("click", function () {
+document.getElementById("button").("click", function () {
 count++;
 if (count==1){
 document.body.style.backgroundColor = "red";
