--- a/11_student_registration/form.html
+++ b/11_student_registration/form.html
@@ -77,6 +77,7 @@ margin-top:8px;
 <input type="checkbox" name="hobbie" value="Drawing">Drawing
 <input type="checkbox" name="hobbie" value="Reading">Reading
 <input type="checkbox" name="hobbie" value="Other">Other
+<input type="text" name="other">
 </td>
 </tr>
 <tr>
