--- a/8_stripped_table.html
+++ b/8_stripped_table.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <title>Stripped TAble</title>
+   <title>Stripped Table</title>
   <style>
     #studentTable {
       width: 100%;
